--- a/package.json
+++ b/package.json
@@ -11,9 +11,8 @@
     "react-dom": "^18.2.0",
     "react-paginate": "^8.1.3",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "serve": "^13.0.2"
-
+    "serve": "^13.0.4",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "dev": "react-scripts start",
